--- a/index.html
+++ b/index.html
@@ -3,27 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV cá nhân của Huỳnh Lê Tấn Đạt</title>
-    <link rel="stylesheet" href="index.css">
+    <title>CV cá nhân</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
-    <h1>Huỳnh Lê Tấn Đạt (Design Frontend)</h1>
-    
-    <div class="thongtin">
-        <b>Tên:</b> <i>Huỳnh Lê Tấn Đạt</i>
-    </div>
+<body class="bg-light text-dark">
+    <div class="container">
+        <h1 class="text-center text-primary my-4">Nguyễn Văn A (Design Frontend)</h1>
+        
+        <div class="card mb-3">
+            <div class="card-body">
+                <b>Tên:</b> <i>Nguyễn Văn A</i>
+            </div>
+        </div>
 
-    <div class="thongtin">
-        <b>Ngày sinh:</b> <i>11/03/2003</i>
-    </div>
+        <div class="card mb-3">
+            <div class="card-body">
+                <b>Ngày sinh:</b> <i>11/03/2003</i>
+            </div>
+        </div>
 
-    <div class="thongtin">
-        <b>Điện thoại:</b> <i>0987654321</i>
-    </div>
+        <div class="card mb-3">
+            <div class="card-body">
+                <b>Điện thoại:</b> <i>0987654321</i>
+            </div>
+        </div>
 
-    <div class="thongtin">
-        <b>Ảnh:</b> <img src="avata.jpg" width="100px" height="100px">
+        <div class="card mb-3">
+            <div class="card-body d-flex align-items-center">
+                <img src="avata.jpg" class="rounded-circle img-fluid mr-3" width="100" height="100">
+                <div>
+                    <b>Tên:</b> <i>Nguyễn Văn A</i><br>
+                    <b>Ngày sinh:</b> <i>11/03/2003</i><br>
+                    <b>Điện thoại:</b> <i>0987654321</i>
+                </div>
+            </div>
+        </div>
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
